# vendor

./: Cargo.toml  LICENSE.md  README.md
src/: helpers.rs  lib.rs
src/project/: create.rs  init.rs  mod.rs  package.rs
src/registry/: auth.rs  manager.rs  mod.rs  package.rs
