[package]
name = "vendor"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/theMackabu/vendor"
description = "Easy to use package manager library"

[dependencies]
anyhow = "1.0.75"
brown = "0.2.0"
colored = "2.0.4"
flate2 = "1.0.28"
futures-util = "0.3.29"
home = "0.5.5"
indicatif = "0.17.7"
inquire = "0.6.2"
log = "0.4.20"
macros-rs = "0.4.0"
reqwest = { version = "0.11.22", features = ["blocking", "multipart", "json", "stream"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
tar = "0.4.40"
tokio = { version = "1.33.0", features = ["full"] }
zip-extract = "0.1.2"
