[package]
name = "vendor"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/theMackabu/vendor"
description = "Easy to use package manager library"

[dependencies]
home = "0.5.5"
log = "0.4.20"
tar = "0.4.40"
brown = "0.2.0"
anyhow = "1.0.75"
colored = "2.0.4"
flate2 = "1.0.28"
inquire = "0.6.2"
macros-rs = "0.4.0"
indicatif = "0.17.7"
serde_yaml = "0.9.27"
zip-extract = "0.1.2"
serde_json = "1.0.107"
futures-util = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "multipart", "json", "stream"] }
global_placeholders = "0.1.0"
lazy_static = "1.4.0"
